# PrattAIEmbeddingsUtilities

./: .gitignore  LICENSE  QWEN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Pratt_Embedding_Utilities/: .gitignore  CONTRIBUTING.md
Pratt_Embedding_Utilities/tests/: README.md
Pratt_Embedding_Utilities/util/: __init__.py
Pratt_Knowledge_Assistants/CCPD/: ccpdAgnoOpenAPI.py
Pratt_Knowledge_Assistants/Production/: productionAgnoOpenAIAPI.py
examples/: README.md  basic_example.py  complete_example.py  dataframe_example.py  reranking_example.py
util/: README_embeddings.md  infinityEmbedding.py  qwen_embeddings.py
