[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pratt-ai-embeddings"
version = "1.0.0"
description = "LangChain-compatible embedding utilities for various embedding APIs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Pratt Institute AI Team", email = "ai-team@pratt.edu"},
]
keywords = ["embeddings", "langchain", "ai", "nlp", "qwen", "infinity", "vector", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/pratt-institute/pratt-ai-embeddings"
Repository = "https://github.com/pratt-institute/pratt-ai-embeddings"
Documentation = "https://github.com/pratt-institute/pratt-ai-embeddings#readme"
"Bug Tracker" = "https://github.com/pratt-institute/pratt-ai-embeddings/issues"

[tool.setuptools.packages.find]
include = ["util*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=util --cov-report=html --cov-report=term-missing"
